2011-12-21  Lucas Forschler  <lforschler@apple.com>

    Merge 94511

    2011-09-04  Abhishek Arya  <inferno@chromium.org>

            Crash in Range::processAncestorsAndTheirSiblings.
            https://bugs.webkit.org/show_bug.cgi?id=67556

            Reviewed by Ryosuke Niwa.

            Create a temporary RefPtr Node vector to keep all the ancestor's
            childs so that we don't access removed child nodes.

            Test: fast/dom/Range/range-delete-contents-event-fire-crash.html

            * dom/Range.cpp:
            (WebCore::Range::processContents):
            (WebCore::Range::processAncestorsAndTheirSiblings):

2011-12-21  Lucas Forschler  <lforschler@apple.com>

    Merge 94508

    2011-09-04  Dan Bernstein  <mitz@apple.com>

            <rdar://problem/10071256> Retain retired custom fonts until the next style recalc

            Reviewed by Darin Adler.

            Test: fast/css/font-face-used-after-retired.html

            During style recalc, existing renderers may reference their old style, including font data.
            Allow them to do so safely by keeping retired custom font data around until after style recalc.

            * css/CSSFontFace.cpp:
            (WebCore::CSSFontFace::retireCustomFont): Added. Calls through to CSSFontSelector, if the font
            face is still part of any segmented font face. Otherwise, deletes the custom font data.
            * css/CSSFontFace.h:
            * css/CSSFontFaceSource.cpp:
            (WebCore::CSSFontFaceSource::pruneTable): Changed to call retireCustomFont() instead of deleting
            retired font data.
            * css/CSSFontSelector.cpp:
            (WebCore::CSSFontSelector::retireCustomFont): Added. Calls through to the Document, if this is
            still the active font selector for a document. Otherwise, deletes the custom font data.
            * css/CSSFontSelector.h:
            * css/CSSSegmentedFontFace.cpp: